Will use exp016 most and least confident SHASH curves for AMS poster. Finished running exp015, 016, 017 with CRPS and ENSO analysis.

--- a/configs/config_016.json
+++ b/configs/config_016.json
@@ -24,14 +24,14 @@
         
         "input_vars": ["PRECT", "TS"],
         "network_inputs": ["PRECT", "TS"],
-        "input_years": [1850, 1860],
+        "input_years": [1850, 2014],
         "input_region": "None",
         "input_mask": ["None"],
         "ensembles": ["ens1", "ens2", "ens3"],
         "ensemble_codes": ["0101", "0151", "0201"],
         "target_var": "PRECT",
         "target_region": [30.5, 34.5, 138.5, 213.5],
-        "target_months": "None",
+        "target_months": [12, 1, 2],
         "averaging_length": 7,
         "lagtime": 14, 
         "front_cutoff": 121, 
