--- a/configs/config_028.json
+++ b/configs/config_028.json
@@ -2,32 +2,31 @@
     "device": "cpu",
     "seed_list": [7],
 
-    "data_dir": "/pscratch/sd/p/plutzner/E3SM/bigdata/presaved/",
-    "perlmutter_data_dir": "/Users/C830793391/BIG_DATA/E3SM_Data/",
-    "perlmutter_inputs_dir": "/Users/C830793391/BIG_DATA/E3SM_Data/presaved/Network Inputs/",
+    "data_dir": "/pscratch/sd/p/plutzner/E3SM/bigdata/presaved",
+    "perlmutter_data_dir": "/pscratch/sd/p/plutzner/E3SM/bigdata/",
+    "perlmutter_inputs_dir": "/pscratch/sd/p/plutzner/E3SM/bigdata/presaved/",
     "local_inputs_dir": "/Users/C830793391/BIG_DATA/E3SM_Data/presaved/Network Inputs/",
-    "figure_dir": "/Users/C830793391/Documents/Research/E3SM/saved/figures/",
-    "perlmutter_figure_dir": "/Users/C830793391/Documents/Research/E3SM/saved/figures/",
-    "model_dir": "/Users/C830793391/Documents/Research/E3SM/saved/models/",
-    "perlmutter_model_dir": "/Users/C830793391/Documents/Research/E3SM/saved/models/",
-    "output_dir": "/Users/C830793391/Documents/Research/E3SM/saved/output/",
-    "perlmutter_output_dir": "/Users/C830793391/Documents/Research/E3SM/saved/output/", 
-    "fig_dpi": 300,
+    "figure_dir": "/Users/C830793391/Documents/Research/E3SM/saved/figures",
+    "perlmutter_figure_dir": "/pscratch/sd/p/plutzner/E3SM/saved/figures/",
+    "model_dir": "/Users/C830793391/Documents/Research/E3SM/saved/models",
+    "perlmutter_model_dir": "/pscratch/sd/p/plutzner/E3SM/saved/models/",
+    "output_dir": "/Users/C830793391/Documents/Research/E3SM/saved/output",
+    "perlmutter_output_dir": "/pscratch/sd/p/plutzner/E3SM/saved/output/", 
+    "fig_dpi": 300, 
 
     "other_dirs": {
-        "data_dir": "/pscratch/sd/p/plutzner/E3SM/bigdata/presaved",
-        "perlmutter_data_dir": "/pscratch/sd/p/plutzner/E3SM/bigdata/",
-        "perlmutter_inputs_dir": "/pscratch/sd/p/plutzner/E3SM/bigdata/presaved/",
+        "data_dir": "/pscratch/sd/p/plutzner/E3SM/bigdata/presaved/",
+        "perlmutter_data_dir": "/Users/C830793391/BIG_DATA/E3SM_Data/",
+        "perlmutter_inputs_dir": "/Users/C830793391/BIG_DATA/E3SM_Data/presaved/Network Inputs/",
         "local_inputs_dir": "/Users/C830793391/BIG_DATA/E3SM_Data/presaved/Network Inputs/",
-        "figure_dir": "/Users/C830793391/Documents/Research/E3SM/saved/figures",
-        "perlmutter_figure_dir": "/pscratch/sd/p/plutzner/E3SM/saved/figures/",
-        "model_dir": "/Users/C830793391/Documents/Research/E3SM/saved/models",
-        "perlmutter_model_dir": "/pscratch/sd/p/plutzner/E3SM/saved/models/",
-        "output_dir": "/Users/C830793391/Documents/Research/E3SM/saved/output",
-        "perlmutter_output_dir": "/pscratch/sd/p/plutzner/E3SM/saved/output/", 
+        "figure_dir": "/Users/C830793391/Documents/Research/E3SM/saved/figures/",
+        "perlmutter_figure_dir": "/Users/C830793391/Documents/Research/E3SM/saved/figures/",
+        "model_dir": "/Users/C830793391/Documents/Research/E3SM/saved/models/",
+        "perlmutter_model_dir": "/Users/C830793391/Documents/Research/E3SM/saved/models/",
+        "output_dir": "/Users/C830793391/Documents/Research/E3SM/saved/output/",
+        "perlmutter_output_dir": "/Users/C830793391/Documents/Research/E3SM/saved/output/", 
         "fig_dpi": 300
-    }
-    ,
+    }, 
 
     "metrics": [
         "custom_mae", "iqr_capture", "sign_test"
@@ -39,14 +38,15 @@
         
         "input_vars": ["PRECT", "TS"],
         "network_inputs": ["PRECT", "TS"],
-        "input_years": [1850, 1900],
+        "input_years": [1850, 2014],
         "input_region": "None",
         "input_mask": ["None"],
+        "target_mask": "land",
         "ensembles": ["ens1", "ens2", "ens3"],
         "ensemble_codes": ["0101", "0151", "0201"],
         "target_var": "PRECT",
-        "target_region": [46.5, 49, 241.5, 243.5],
-        "target_months": [5, 6, 7, 8, 9],
+        "target_region": [38.5, 54.5, -133.5, -120.5],
+        "target_months": [10, 11, 12, 1, 2, 3],
         "averaging_length": 7,
         "lagtime": 14, 
         "front_cutoff": 14, 
@@ -90,12 +90,12 @@
     },
 
     "trainer": {
-        "max_epochs": 80,
+        "max_epochs": 1000,
         "save_dir": "/Users/C830793391/Documents/Research/E3SM/saved/",
         "perlmutter_model_dir": "/pscratch/sd/p/plutzner/E3SM/saved/models",
         "early_stopping":{
             "args":{
-                "patience": 5,
+                "patience": 25,
                 "min_delta": 0.0
             }
         }
