--- a/configs/config_033.json
+++ b/configs/config_033.json
@@ -1,4 +1,4 @@
-{"expname": "exp032",
+{"expname": "exp033",
     "device": "cpu",
     "seed_list": [7],
 
@@ -60,7 +60,7 @@
 
         "data_dir": "/Users/C830793391/BIG_DATA/E3SM_Data/presaved/", 
         "perlmutter_data_dir": "/pscratch/sd/p/plutzner/E3SM/bigdata/presaved/",
-        "batch_size": 32
+        "batch_size": 256
     }, 
 
     "arch": {
@@ -69,7 +69,7 @@
         "freeze_id" : ["tau"],
         "circular_padding": [15, 15, 0, 0],
         "filters" : [32, 32], 
-        "kernel_size": [3, 3],
+        "kernel_size": [9, 5],
         "cnn_act": ["ReLU", "ReLU"],
 
         "hiddens_block": [20, 20],
@@ -82,11 +82,11 @@
         "hiddens_final_act": "ReLU", 
 
 
-        "dropout": 0.25
+        "dropout": 0.40
     }, 
 
     "optimizer": {
-        "type": "SGD",
+        "type": "Adam",
         "args": {
             "lr": 0.000001,
             "weight_decay": 0.0
@@ -100,7 +100,7 @@
         "early_stopping":{
             "args":{
                 "patience": 15,
-                "min_delta": 0.0000001
+                "min_delta": 0.000001
             }
         }
     }
