Column Model Run ENSO + Precip analysis, and E3SM Daily ENSO Phase analysis switch (from monthly enso data)

--- a/configs/config_042.json
+++ b/configs/config_042.json
@@ -3,6 +3,7 @@
     "seed_list": [7],
 
     "input_data": "exp042",
+    "data_source": "E3SM", 
     "data_dir": "/pscratch/sd/p/plutzner/E3SM/bigdata/presaved",
     "perlmutter_data_dir": "/pscratch/sd/p/plutzner/E3SM/bigdata/",
     "perlmutter_inputs_dir": "/pscratch/sd/p/plutzner/E3SM/bigdata/presaved/",
