--- a/configs/config_076.json
+++ b/configs/config_076.json
@@ -2,7 +2,7 @@
     "device": "cpu",
     "seed_list": [7],
 
-    "input_data": "None", 
+    "input_data": "exp076", 
     "data_source": "E3SM",
     "inference_data": "E3SM",
     "perlmutter_data_dir": "/pscratch/sd/p/plutzner/E3SM/bigdata/",
