--- a/configs/config_078.json
+++ b/configs/config_078.json
@@ -1,11 +1,10 @@
-{"expname": "exp042",
+{"expname": "exp078",
     "device": "cpu",
     "seed_list": [7],
 
-    "input_data": "exp042",
-    "data_source": "E3SM", 
-    "inference_data": "E3SM",
-    "data_dir": "/pscratch/sd/p/plutzner/E3SM/bigdata/presaved",
+    "input_data": "None", 
+    "data_source": "ERA5",
+    "inference_data": "ERA5",
     "perlmutter_data_dir": "/pscratch/sd/p/plutzner/E3SM/bigdata/",
     "perlmutter_inputs_dir": "/pscratch/sd/p/plutzner/E3SM/bigdata/presaved/",
     "perlmutter_figure_dir": "/pscratch/sd/p/plutzner/E3SM/saved/figures/",
@@ -20,71 +19,67 @@
     "criterion": "ShashNLL",
 
     "databuilder": {
-    
-        "input_vars": ["PRECT", "TS"],
-        "network_inputs": ["PRECT", "TS"],
-        "input_years": [1850, 2014],
+        "data_source": "ERA5",
+        "input_vars": "None",   
+        "network_inputs": ["RMM1", "RMM2", "Nino34"],
+        "input_years": [1974, 2023],
+        "train_years": [1974, 2009],
+        "val_years": [2010, 2017],
+        "test_years": [2018, 2023],
         "input_region": "None",
         "input_mask": ["None"],
         "target_mask": "land",
-        "ensembles": ["ens1", "ens2", "ens3"],
         "ensemble_codes": ["0101", "0151", "0201"],
-        "target_var": "PRECT",
+        "target_var": "tp",
         "target_region": [38.5, 54.5, -133.5, -120.5],
         "target_months": [10, 11, 12, 1, 2, 3],
         "averaging_length": 14,
         "lagtime": 14, 
-        "front_cutoff": 14, 
-        "back_cutoff": 14, 
+        "front_cutoff": 150, 
+        "back_cutoff": 245, 
         "CRPS_tolerance": 1e-7
         
     }, 
 
     "data_loader": {
         "shuffle_target": "False",
-        "data_dir": "/Users/C830793391/BIG_DATA/E3SM_Data/presaved/", 
         "perlmutter_data_dir": "/pscratch/sd/p/plutzner/E3SM/bigdata/presaved/",
-        "batch_size": 128
+        "batch_size": 32
     }, 
 
     "arch": {
-        "type": "cnn",
-        "n_inputchannel": 2,
+        "type": "basicnn",
+        "n_inputchannel": 1,
+
+        "basic_act": ["ReLU", "ReLU"],
         "freeze_id" : "None",
-        "circular_padding": [15, 15, 0, 0],
-        "filters" : [32, 32], 
-        "kernel_size": [7, 3],
-        "cnn_act": ["ReLU", "ReLU"],
+        "hiddens_block_in": [3, 3],
+        "hiddens_block_out": 6,
+        "hiddens_block_act": ["ReLU", "ReLU"],
 
-        "hiddens_block": [20, 20],
-        "hiddens_block_in": [141120],
-        "hiddens_block_act": ["ReLU"],
-        "hiddens_block_out": 20,
-
-        "hiddens_final_in": 20,
+        "hiddens_final_in": 6,
         "hiddens_final_out": 4,
-        "hiddens_final_act": "ReLU", 
-
-
-        "dropout": 0.60
+        "hiddens_final_act": "ReLU",
+        "filters" : [0], 
+        "cnn_act": ["None"], 
+        "kernel_size": [0]
     }, 
 
     "optimizer": {
-        "type": "Adam",
+        "type": "ASGD",
         "args": {
-            "lr": 0.0000001,
+            "lr": 0.000001,
             "weight_decay": 0.0
         }
     },
 
     "trainer": {
-        "max_epochs": 100,
-        "save_dir": "/Users/C830793391/Documents/Research/E3SM/saved/",
-        "perlmutter_model_dir": "/pscratch/sd/p/plutzner/E3SM/saved/models",
+        "max_epochs": 3500,
+        "perlmutter_save_dir": "/pscratch/sd/p/plutzner/E3SM/saved/models",
         "early_stopping":{
             "args":{
-                "patience": 25,
-                "min_delta": 0.00000001
+                "patience": 200,
+                "min_delta": 0.0
             }
         }
     }
