--- a/configs/config_079.json
+++ b/configs/config_079.json
@@ -1,18 +1,17 @@
-{"expname": "exp042",
+{"expname": "exp079",
     "device": "cpu",
     "seed_list": [7],
 
-    "input_data": "exp042",
-    "data_source": "E3SM", 
-    "inference_data": "E3SM",
-    "data_dir": "/pscratch/sd/p/plutzner/E3SM/bigdata/presaved",
+    "input_data": "None",
+    "data_source": "ERA5", 
+    "inference_data": "ERA5",
     "perlmutter_data_dir": "/pscratch/sd/p/plutzner/E3SM/bigdata/",
     "perlmutter_inputs_dir": "/pscratch/sd/p/plutzner/E3SM/bigdata/presaved/",
     "perlmutter_figure_dir": "/pscratch/sd/p/plutzner/E3SM/saved/figures/",
     "perlmutter_model_dir": "/pscratch/sd/p/plutzner/E3SM/saved/models/",
     "perlmutter_output_dir": "/pscratch/sd/p/plutzner/E3SM/saved/output/", 
     "fig_dpi": 300,
-
+    
     "metrics": [
         "custom_mae", "iqr_capture", "sign_test"
     ],
@@ -20,17 +19,20 @@
     "criterion": "ShashNLL",
 
     "databuilder": {
-    
-        "input_vars": ["PRECT", "TS"],
-        "network_inputs": ["PRECT", "TS"],
-        "input_years": [1850, 2014],
+        "data_source": "ERA5",
+        "input_vars": ["tp", "skt"],
+        "network_inputs": ["tp", "skt"],
+        "input_years": [1940, 2023],
+        "train_years": [1940, 1998],
+        "val_years": [1999, 2017],
+        "test_years": [2018, 2023],
         "input_region": "None",
         "input_mask": ["None"],
         "target_mask": "land",
-        "ensembles": ["ens1", "ens2", "ens3"],
-        "ensemble_codes": ["0101", "0151", "0201"],
-        "target_var": "PRECT",
-        "target_region": [38.5, 54.5, -133.5, -120.5],
+        "ensembles": "None",
+        "ensemble_codes": "None",
+        "target_var": "tp",
+        "target_region": [39, 55, -134, -121],
         "target_months": [10, 11, 12, 1, 2, 3],
         "averaging_length": 14,
         "lagtime": 14, 
@@ -42,7 +44,6 @@
 
     "data_loader": {
         "shuffle_target": "False",
-        "data_dir": "/Users/C830793391/BIG_DATA/E3SM_Data/presaved/", 
         "perlmutter_data_dir": "/pscratch/sd/p/plutzner/E3SM/bigdata/presaved/",
         "batch_size": 128
     }, 
@@ -57,7 +58,7 @@
         "cnn_act": ["ReLU", "ReLU"],
 
         "hiddens_block": [20, 20],
-        "hiddens_block_in": [141120],
+        "hiddens_block_in": [144256],
         "hiddens_block_act": ["ReLU"],
         "hiddens_block_out": 20,
 
@@ -65,21 +66,19 @@
         "hiddens_final_out": 4,
         "hiddens_final_act": "ReLU", 
 
-
         "dropout": 0.60
     }, 
 
     "optimizer": {
         "type": "Adam",
         "args": {
-            "lr": 0.0000001,
+            "lr": 0.00000001,
             "weight_decay": 0.0
         }
     },
 
     "trainer": {
         "max_epochs": 100,
-        "save_dir": "/Users/C830793391/Documents/Research/E3SM/saved/",
         "perlmutter_model_dir": "/pscratch/sd/p/plutzner/E3SM/saved/models",
         "early_stopping":{
             "args":{
