Adding ERA20C MJO data to OBS

--- a/configs/config_075.json
+++ b/configs/config_075.json
@@ -23,6 +23,7 @@
         "input_vars": ["PRECT", "TS"],
         "network_inputs": ["PRECT", "TS"],
         "input_years": [1850, 2014],
+        "test_years": [1850, 2014], 
         "input_region": "None",
         "input_mask": ["None"],
         "target_mask": "land",
@@ -41,7 +42,6 @@
 
     "data_loader": {
         "shuffle_target": "False",
-        "data_dir": "/Users/C830793391/BIG_DATA/E3SM_Data/presaved/", 
         "perlmutter_data_dir": "/pscratch/sd/p/plutzner/E3SM/bigdata/presaved/",
         "batch_size": 128
     }, 
