--- a/configs/config_088.json
+++ b/configs/config_088.json
@@ -1,8 +1,8 @@
-{"expname": "exp082",
+{"expname": "exp088",
     "device": "cpu",
     "seed_list": [7],
 
-    "input_data": "exp082", 
+    "input_data": "None", 
     "data_source": "ERA5",
     "inference_data": "ERA5",
     "perlmutter_data_dir": "/pscratch/sd/p/plutzner/E3SM/bigdata/",
@@ -23,9 +23,9 @@
         "input_vars": "None",   
         "network_inputs": ["RMM1", "RMM2", "Nino34"],
         "input_years": [1979, 2023],
-        "train_years": [1986, 2017],
-        "val_years": [2018, 2023],
-        "test_years": [1979, 1985],
+        "train_years": [1979, 2008],
+        "val_years": [2009, 2016],
+        "test_years": [2017, 2023],
         "input_region": "None",
         "input_mask": ["None"],
         "target_mask": "land",
